--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,7 +1,17 @@
 <link rel="stylesheet" href="/css/user_profile.css">
-        <h1>
-            Codeial / Profile Page
-        </h1>
+       <img src="<%= user.avatar %>" alt="<%= user.name %>" width="">
 
-         <p><%= user.name %></p>
-         <p><%= user.email %></p>
+         <p><%= user_profile.name %></p> //check once if it is profile_user**
+         <p><%= user_profile.email %></p>
+
+         <% if(user.id == profile_user.id){%>
+            <form action="/users/update/<%= profile_user.id %>" enctype="multipart/form-data" method="post">
+                <input type="text" name="name" placeholder="Your Name.." value="<%= profile_user.name%>" required>
+                <input type="email" name="email" placeholder="Your Email.." value="<%= profile_user.email%>" required>
+                <input type="file" name="Avatar" placeholder="Profile Pic">
+                <input type="submit" value="Update">
+            </form>
+
+        <%}else{%>
+
+        <%}%>
